[package]
name = "tutoGame"
version = "0.1.0"
authors = ["Yoann Thomas <tho994@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.3.14"
text_io = "0.1.7"
web3 = { version = "0.11.0", default-features = false, features = ["http"] }